--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@
 
 #
 spring.datasource.url=jdbc:mysql://localhost:3306/family_directory
-spring.datasource.username=root
-spring.datasource.password=pass46
+spring.datasource.username={userName}
+spring.datasource.password={password}
